test/programs/error-pattern-3-ellipses.defs
(def ($x .. $y .. $z ..) constructor)